--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div class="container px-lg-0 py-lg-2 header-container">
-        <div class="row no-gutters rrr justify-content-around">
+        <div class="row no-gutters justify-content-around">
             <div class="col-sm-4 py-2 py-sm-2 py-lg-0 col-lg-2 header-column">
                 <div class="header-content">
                     nnn
