--- a/index.html
+++ b/index.html
@@ -34,26 +34,24 @@
     </div>
 </header>
 <main>
-    <div class="container">
-        <div class="row">
-            <div class="col nnn">
-                <div class="ddd">
+    <div class="container py-lg-2">
+        <div class="row no-gutters justify-content-around">
+            <div class="col col-12 col-sm-auto main-column-left">
+                <div class="main-column-left-top">
                 </div>
-                <div class="ddd">
-                </div>
-                <div class="ddd">
-                </div>
-                <div class="ddd">
+                <div class="main-column-left-bottom">
                 </div>
             </div>
-            <div class="col nnn">
-                 <div class="ddd">
+            <div class="col col-12 col-sm main-column-right">
+                <div class="main-img float-left">
                 </div>
-                <div class="ddd">
+                <div class="main-img float-left">
                 </div>
-                <div class="ddd">
+                <div class="main-img float-left">
                 </div>
-                <div class="ddd">
+                <div class="main-img float-left">
+                </div>
+                <div class="main-img float-left">
                 </div>
             </div>
         </div>
