--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
 </head>
 <body>
 <header>
-    <div class="container py-lg-2 header-container">
+    <div class="container py-lg-2">
         <div class="row no-gutters justify-content-around">
             <div class="col-sm-4 py-2 py-sm-2 py-lg-0 col-md-2">
-                <div class="header-content">
-                    nnn
+                <div class="header-content content-img">
+                    <img src="img/project_apollo.jpg" class="header-img">
                 </div>
                 <!--
                 <a href="https://placeholder.com"><img src="https://via.placeholder.com/150x90/red"></a>-->
             </div>
             <div class="col-sm-8 py-2 py-sm-2 py-lg-0 col-md-4">
-                <div class="header-content header-content-mg-right">
-                    mmm
+                <div class="header-content header-content-mg-right background-1">
                 </div>
             </div>
             <div class="col-sm-12 py-2 py-sm-2 py-lg-0 col-md-6 header-column">
-                <div class="header-content header-content-mg-right header-content-mg-right-lg">
-                    mmm
+                <div class="header-content header-content-mg-right header-content-mg-right-lg background-1">
                 </div>
             </div>
         </div>
@@ -37,14 +35,15 @@
     <div class="container py-2">
         <div class="row no-gutters justify-content-around">
             <div class="col col-12 col-sm-auto main-column-left position-relative">
-                <div class="main-column-left-top position-absolute">
+                <div class="main-column-left-top position-absolute background-1">
                 </div>
-                <div class="main-column-left-bottom position-absolute">
+                <div class="main-column-left-bottom position-absolute content-img">
+                    <img src="img/project_organica.jpg" class="main-img-img">
                 </div>
             </div>
             <div class="col col-12 col-sm main-column-right">
                 <div class="row no-gutters">
-                    <div class="col-12 big">
+                    <div class="col-12 big background-2">
                     </div>
                 </div>
                 <div class="row">
@@ -59,15 +58,25 @@
                         </div>
                         <div class="main-img float-left">
                         </div>
+                         <div class="main-img float-left">
+                        </div>
+                        <div class="main-img float-left">
+                        </div>
+                        <div class="main-img float-left">
+                        </div>
+                        <div class="main-img float-left">
+                        </div>
+                        <div class="main-img float-left">
+                        </div>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col-12 col-sm-6">
-                        <div class="main-column-right-end-content-margin">
+                        <div class="main-column-right-end-content-margin background-2">
                         </div>
                     </div>
                     <div class="col-12 col-sm-6">
-                        <div class="main-column-right-end-content">
+                        <div class="main-column-right-end-content background-2">
                         </div>
                     </div>
                 </div>
@@ -75,6 +84,33 @@
         </div>
     </div>
 </main>
+<footer>
+    <div class="container py-2">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 footer-container">
+                <div class="footer-content-big background-1">
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 footer-container">
+                <div class="footer-content-big background-1">
+                </div>
+            </div>
+            <div class="col-12 col-md-4 footer-container">
+                <div class="row">
+                    <div class="col-12 footer-container-small">
+                        <div class="footer-content-small background-1">
+                        </div>
+                    </div>
+                    <div class="col-12 footer-container-small">
+                        <div class="footer-content-small">
+                            <img src="img/background.jpg" class="footer-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <script src="vendors/jquery/dist/jquery.min.js"></script>
