remove script, add modal css

--- a/index.html
+++ b/index.html
@@ -60,28 +60,76 @@
                             </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img2.jpg">
+                            <a href="#openModa2"><img src="img/main-img2.jpg"></a>
+                        </div>
+                        <div id="openModa2" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img2.jpg">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img3.png">
+                            <a href="#openModa3"><img src="img/main-img3.png"></a>
+                        </div>
+                        <div id="openModa3" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img3.png">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img4.png">
+                            <a href="#openModa4"><img src="img/main-img4.png"></a>
+                        </div>
+                        <div id="openModa4" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img4.png">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img5.jpg">
+                            <a href="#openModa5"><img src="img/main-img5.jpg"></a>
+                        </div>
+                        <div id="openModa5" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img5.jpg">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img6.jpg">
+                            <a href="#openModa6"><img src="img/main-img6.jpg"></a>
+                        </div>
+                        <div id="openModa6" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img6.jpg">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img7.png">
+                            <a href="#openModa7"><img src="img/main-img7.png"></a>
+                        </div>
+                        <div id="openModa7" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img7.png">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img8.jpg">
+                            <a href="#openModa8"><img src="img/main-img8.jpg"></a>
+                        </div>
+                        <div id="openModa8" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img8.jpg">
+                            </div>
                         </div>
                         <div class="main-img float-left">
-                            <img src="img/main-img9.jpg">
+                            <a href="#openModa9"><img src="img/main-img9.jpg"></a>
+                        </div>
+                        <div id="openModa9" class="modalDialog">
+                            <div>
+                                <a href="#close" title="Закрыть" class="close">X</a>
+                                <img src="img/main-img9.jpg">
+                            </div>
                         </div>
                     </div>
                 </div>
