add img footer and height-img for 576 and 768px

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 <main>
     <div class="container py-2 main-container">
         <div class="row no-gutters justify-content-around">
-            <div class="col col-12 col-sm-auto main-column-left position-relative">
+            <div class="col col-12 col-sm-auto main-column-left">
                 <div class="main-column-left-top background-1">
+                    <div class="main-column-left-top-background">
+                    </div>
                 </div>
                 <div class="main-column-left-bottom position-absolute content-img">
                     <img src="img/project_organica.jpg" class="main-img-img">
@@ -166,7 +168,7 @@
                     </div>
                     <div class="col-12 footer-container-small">
                         <div class="footer-content-small">
-                            <img src="img/background.jpg" class="footer-img">
+                            <img src="img/footer-img.png" class="footer-img">
                         </div>
                     </div>
                 </div>
